--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <groupId>com.clinacuity</groupId>
     <artifactId>annotations-comparison-viewer</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>izpack-jar</packaging>
 
     <developers>
         <developer>
@@ -23,6 +24,11 @@
         <maven.compiler.source>1.9</maven.compiler.source>
         <maven.compiler.target>1.9</maven.compiler.target>
         <log4j2.version>2.8.2</log4j2.version>
+        <staging.dir>${project.build.directory}/staging</staging.dir>
+        <info.appName>ETUDE Viewer</info.appName>
+        <info.appsubpath>etude-viewer/standard</info.appsubpath>
+        <izpack.dir.app>${basedir}/src/main/izpack</izpack.dir.app>
+        <staging.dir.app>${staging.dir}</staging.dir.app>
     </properties>
 
     <repositories>
@@ -100,6 +106,7 @@
 
     <build>
         <plugins>
+            <!-- Allows running the exec items -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -129,56 +136,16 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Runs unit tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20</version>
                 <configuration/>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>2.2</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <transformers>
-                                <!-- Set the main class of the executable JAR -->
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.clinacuity.acv.context.AppMain</mainClass>
-                                </transformer>
-                                <!-- Merge the uimaFIT configuration files -->
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                    <resource>
-                                        META-INF/org.apache.uima.fit/fsindexes.txt
-                                    </resource>
-                                </transformer>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                    <resource>
-                                        META-INF/org.apache.uima.fit/types.txt
-                                    </resource>
-                                </transformer>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                    <resource>
-                                        META-INF/org.apache.uima.fit/typepriorities.txt
-                                    </resource>
-                                </transformer>
-                            </transformers>
-                            <outputFile>
-                                ${project.build.directory}/${artifactId}-${version}-jar-with-dependencies.jar
-                            </outputFile>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+
+            <!-- Copies items to specified dirs; readying for deploy/packaging -->
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>3.0.2</version>
@@ -213,6 +180,52 @@
                                     <filtering>false</filtering>
                                 </resource>
                             </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.izpack</groupId>
+                <artifactId>izpack-maven-plugin</artifactId>
+                <extensions>true</extensions>
+                <version>5.1.2</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>izpack</goal>
+                        </goals>
+                        <configuration>
+                            <!-- base for relative paths in izpack descriptor -->
+                            <baseDir>${staging.dir.app}</baseDir>
+                            <installFile>${izpack.dir.app}/install.xml</installFile>
+                            <outputDirectory>${project.build.directory}</outputDirectory>
+                            <finalName>EtudeViewerInstaller</finalName>
+                            <enableOverrideArtifact>true</enableOverrideArtifact>
+                            <mkdirs>true</mkdirs>
+                            <autoIncludeUrl>false</autoIncludeUrl>
+                            <autoIncludeDevelopers>false</autoIncludeDevelopers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.7</version>
+                <executions>
+                    <execution>
+                        <id>default-cli</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <copy todir="${staging.dir}">
+                                    <fileset dir="${izpack.dir.app}" />
+                                </copy>
+                            </target>
                         </configuration>
                     </execution>
                 </executions>
