DEV-196: updated sample files to test ticket

--- a/data/samples/basic/reference.conf
+++ b/data/samples/basic/reference.conf
@@ -29,3 +29,11 @@ XPath:        ./TAGS/PROBLEM
 Begin Attr:   start
 End Attr:     end
 Comment:      comment
+
+[ Item4 ]
+Parent:       Sample
+Short Name:   SAMPLE
+XPath:        ./TAGS/SAMPLE
+Begin Attr:   start
+End Attr:     end
+Comment:      comment
