--- a/data/samples/basic/system.conf
+++ b/data/samples/basic/system.conf
@@ -33,3 +33,10 @@ Short Name:   Problem
 XPath:        .//type2:MachineLearningAnnotation[@derivedPHItype="Problem"]
 Begin Attr:   begin
 End Attr:     end
+
+[ Item4 ]
+Parent:       Sample
+Short Name:   Sample
+XPath:        .//type2:MachineLearningAnnotation[@derivedPHItype="Sample"]
+Begin Attr:   begin
+End Attr:     end
